# rknn-toolkit2

./: CHANGELOG.md  LICENSE  README.md
doc/: RKNN-Toolkit2_OP_Support-1.6.0.md  RKNNToolKit2_API_Difference_With_Toolkit1-1.4.0.md  RKNNToolKit2_API_Difference_With_Toolkit1-1.5.0.md  RKNNToolKit2_OP_Support-1.1.0.md  RKNNToolKit2_OP_Support-1.2.0.md  RKNNToolKit2_OP_Support-1.3.0.md  RKNNToolKit2_OP_Support-1.4.0.md  RKNNToolKit2_OP_Support-1.5.2.md  RKNNToolKit2_OP_Support-v0.7.0.md  RKNNToolKit2_OP_Support_v1.0.0.md  changelog-1.1.0.txt  changelog-1.2.0.txt  changelog-1.3.0.txt  changelog-1.4.0.txt  changelog-1.5.0.txt  changelog-1.5.2.txt  changelog-v0.7.0.txt  changelog.txt  changelog_v1.0.0.txt  requirements-1.1.0.txt  requirements-v0.7.0.txt  requirements.txt  requirements_cp310-1.5.0.txt  requirements_cp310-1.5.2.txt  requirements_cp36-1.2.0.txt  requirements_cp36-1.3.0.txt  requirements_cp36-1.4.0.txt  requirements_cp36-1.5.2.txt  requirements_cp38-1.3.0.txt  requirements_cp38-1.5.2.txt  rknn-toolkit2_OP_Support-V0.6.0.md  rknn_server_proxy.md
docker/docker_file/ubuntu_18_04_cp36/: Dockerfile_ubuntu_18_04_for_cp36  sources_bionic.list
docker/docker_file/ubuntu_20_04_cp38/: Dockerfile_ubuntu_20_04_for_cp38  sources_focal.list
docker/docker_file/ubuntu_22_04_cp310/: Dockerfile_ubuntu_22_04_for_cp310  sources_bionic.list
examples/: readme.txt
examples/caffe/mobilenet_v2/: README.md  dataset.txt  mobilenet_v2.prototxt  test.py
examples/caffe/vgg-ssd/: README.md  deploy_rm_detection_output.prototxt  mbox_priorbox_97.txt  test.py
examples/common_function_demos/load_quantized_model/: README.md  test.py
examples/darknet/yolov3_416x416/: README.md  dataset.txt  test.py  yolov3_utils.py
examples/functions/accuracy_analysis/: README.md  test.py
examples/functions/batch_size/: README.md  test.py
examples/functions/board_test/: README.md  test.py
examples/functions/dynamic_input/: README.md  test.py
examples/functions/gen_cpp_rknn_deploy_demo/: test.py
examples/functions/hybrid_quant/: README.md  ssd_post_process.py  step1.py  step2.py
examples/functions/load_quantized_model/: test.py
examples/functions/mmse/: README.md  test.py
examples/functions/model_pruning/: README.md  dataset.txt  mobilenet_deploy.prototxt  test.py
examples/functions/multi_input_test/: README.md  dataset.txt  input2.npy  input3.npy  test.py
examples/load_quantized_model/: test.py
examples/onnx/resnet50v2/: README.md  test.py
examples/onnx/yolov5/: README.md  dataset.txt  test.py
examples/pytorch/resnet18/: README.md  (+1 more)
rknn-toolkit-lite2-v1.2.0/doc/: change_log.txt
rknn-toolkit2/: CHANGELOG.txt
rknn-toolkit2/examples/: readme.txt
rknn_toolkit_lite2/: CHANGELOG.txt
rknn_toolkit_lite2/docs/: change_log.txt
rknpu2/: rknpu.mk
rknpu2/examples/: README.md  README_CN.md
rknpu2/examples/RV1106_RV1103/rknn_mobilenet_demo/: CMakeLists.txt  README.md  README_CN.md  build-linux_RV1106.sh
rknpu2/examples/RV1106_RV1103/rknn_mobilenet_demo/src/: main.cc  main_nhwc.cc
rknpu2/examples/RV1106_RV1103/rknn_yolov5_demo/: CMakeLists.txt  README.md  README_CN.md
rknpu2/examples/RV1106_RV1103/rknn_yolov5_demo/include/: postprocess.h
rknpu2/examples/RV1106_RV1103/rknn_yolov5_demo/src/: main.cc  postprocess.cc
rknpu2/examples/rknn_api_demo/: CMakeLists.txt  README.md  README_CN.md  build-android_RK3566_RK3568.sh
rknpu2/examples/rknn_api_demo/src/: rknn_create_mem_demo.cpp  rknn_create_mem_with_rga_demo.cpp  rknn_set_internal_mem_from_fd_demo.cpp  rknn_with_mmz_demo.cpp
rknpu2/examples/rknn_benchmark/: CMakeLists.txt  README.md  README_CN.md
rknpu2/examples/rknn_benchmark/src/: rknn_benchmark.cpp
rknpu2/examples/rknn_custom_op_demo/rknn_custom_gpu_op_demo/: CMakeLists.txt  README.md  build-android_RK3562.sh  build-android_RK3566_RK3568.sh  build-android_RK3588.sh  build-linux_RK3566_RK3568.sh  build-linux_RK3588.sh
rknpu2/examples/rknn_custom_op_demo/rknn_custom_gpu_op_demo/cl_kernel/: custom_argmax_op.cl
rknpu2/examples/rknn_custom_op_demo/rknn_custom_gpu_op_demo/src/: rknn_api_test_custom_op_opencl.cpp  rknn_custom_op_opencl_plugin_lib.cpp
rknpu2/examples/rknn_dynamic_shape_input_demo/: CMakeLists.txt  README.md  README_CN.md
rknpu2/examples/rknn_dynamic_shape_input_demo/src/: rknn_dynshape_inference.cc  rknn_dynshape_inference_zero_copy.cc  rknn_dynshape_inference_zero_copy_alloc_outside.cc
rknpu2/examples/rknn_internal_mem_reuse_demo/: CMakeLists.txt  README.md  README_CN.md  build-android_RK3588.sh  build-linux_RK3566_RK3568.sh
rknpu2/examples/rknn_internal_mem_reuse_demo/src/: rknn_internal_mem_reuse_demo.cc
rknpu2/examples/rknn_matmul_api_demo/: CMakeLists.txt  README.md  README_CN.md  build-android_RK3566_RK3568.sh  build-linux_RK3588.sh
rknpu2/examples/rknn_matmul_api_demo/src/: matmul_utils.cpp  matmul_utils.h  rknn_matmul_api_demo.cpp
rknpu2/examples/rknn_mobilenet_demo/: CMakeLists.txt  README.md  README_CN.md
rknpu2/examples/rknn_mobilenet_demo/src/: main.cc
rknpu2/examples/rknn_multiple_input_demo/: CMakeLists.txt  README.md  README_CN.md
rknpu2/examples/rknn_multiple_input_demo/model/RK3562/: multiple_input_demo.rknn
rknpu2/examples/rknn_multiple_input_demo/model/RK3566_RK3568/: multiple_input_demo.rknn
rknpu2/examples/rknn_multiple_input_demo/model/RK3588/: multiple_input_demo.rknn
rknpu2/examples/rknn_multiple_input_demo/onnx_model/: image1_nchw.npy  image2_nchw.npy  test.onnx
rknpu2/examples/rknn_multiple_input_demo/src/: main.cc
rknpu2/examples/rknn_yolov5_demo/: CMakeLists.txt  README.md  README_CN.md  build-linux_RK3562.sh  build-linux_RK3588.sh
rknpu2/examples/rknn_yolov5_demo/convert_rknn_demo/yolov5/: README.md  README_CN.md  onnx2rknn.py
rknpu2/examples/rknn_yolov5_demo/include/: postprocess.h  preprocess.h  rga_func.h
rknpu2/examples/rknn_yolov5_demo/src/: main.cc  main_video.cc  postprocess.cc  preprocess.cc
rknpu2/examples/rknn_yolov5_demo/utils/: drawing.cpp  drawing.h  mpp_decoder.cpp  mpp_decoder.h  mpp_encoder.cpp  mpp_encoder.h
rknpu2/runtime/: Android.bp  Android.go  init.rknn_server.rc
(+148 files in other folders)
